Fix "Choosing the Right E Bike" card spacing

--- a/frontend/src/app/components/module1/Mod1ChooseBike.module.css
+++ b/frontend/src/app/components/module1/Mod1ChooseBike.module.css
@@ -21,7 +21,7 @@
 /* cards */
 .cardContainer {
   margin: auto;
-  width: 80%;
+  width: 933px;
   display: flex;
   justify-content: space-between;
   margin-bottom: 16vh;
